--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,7 +11,7 @@ jobs:
       - uses: actions/checkout@v6
       - uses: actions/setup-python@v6
         with:
-          python-version-file: .python-version
+          python-version: "3.13"
       - uses: astral-sh/setup-uv@v7
       - name: Install dependencies
         run: uv sync --frozen
