--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,5 +15,9 @@ jobs:
       - uses: astral-sh/setup-uv@v7
       - name: Install dependencies
         run: uv sync --frozen
+      - name: Install package
+        run: uv pip install -e .
+      - name: Ruff format check
+        run: uv run ruff format --check .
       - name: Run tests
         run: uv run pytest tests
