--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,3 +14,8 @@ dependencies = [
 [build-system]
 requires = ["setuptools>=70"]
 build-backend = "setuptools.build_meta"
+
+[tool.setuptools.packages.find]
+where = ["."]
+include = ["molzen*"]
+exclude = ["ipynb*", "tests*"]
