--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,3 +17,8 @@ build-backend = "hatchling.build"
 
 [tool.hatch.build.targets.wheel]
 packages = ["molzen"]
+
+[tool.pytest.ini_options]
+markers = [
+    "local_only: tests requiring local data not available in GitHub CI",
+]
